# WIND-FORECASTER

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/: deps.py  main.py  settings.py
apps/api/models/: __init__.py  experiment_tracking.py
apps/api/routers/: models.py  research.py
apps/api/schemas/: models.py  research.py  research_v2.py
db/sql/: 001_experiment_tracking_v2.sql
docs/: AGENT_RAILWAY_AND_SQL.md
services/backtest/: __init__.py  engine.py  evaluation_v2.py  metrics.py
services/experiments/: __init__.py  git_info.py  persist_v2.py
services/features/: __init__.py  dataset_builder.py
services/models/: __init__.py  baseline.py  logreg_model.py
services/research/: __init__.py  compare_v2.py
tests/: test_backtest_engine.py  test_evaluation_v2.py  test_logreg_temporal.py  test_metrics.py  test_settings_db_url.py
