[project]
name = "wind-price-lab"
version = "0.1.0"
description = "EPEX zone research: weather, labels, models, backtest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.2",
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "httpx>=0.27",
]

[project.optional-dependencies]
ml = [
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "httpx>=0.27",
]
dev = [
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
